# JPEG-Reproduce

code/: CMakeLists.txt  instructions.txt
code/src/: block_extractor.cpp  block_extractor.hpp  dct.cpp  dct.hpp  encoder_decoder.cpp  encoder_decoder.hpp  huffman.cpp  huffman.hpp  main.cpp  quantizer.cpp  quantizer.hpp  yuv_extractor.cpp  yuv_extractor.hpp  zigzag_scanner.cpp  zigzag_scanner.hpp
